--- a/Project Instabot-1 Rohan Raj.ipynb
+++ b/Project Instabot-1 Rohan Raj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "from selenium import webdriver                                             #import web Driver\n",
     "import time                                                                #it use in wait\n",
     "from bs4 import BeautifulSoup                                              #work with attribute \n",
-    "from selenium.common.exceptions import TimeoutException"
+    "from selenium.common.exceptions import TimeoutException\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n"
    ]
   },
   {
@@ -26,37 +27,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NoSuchElementException",
-     "evalue": "Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\".bIiDR\"}\n  (Session info: chrome=81.0.4044.113)\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNoSuchElementException\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-194-f87cd8f8ca6f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mbtn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mlogin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-194-f87cd8f8ca6f>\u001b[0m in \u001b[0;36mlogin\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mpassword\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubmit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mbtn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbrowser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_class_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"bIiDR\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#locate the not now button\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mbtn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mfind_element_by_class_name\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    562\u001b[0m             \u001b[0melement\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element_by_class_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'foo'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    563\u001b[0m         \"\"\"\n\u001b[0;32m--> 564\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_element\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCLASS_NAME\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    565\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    566\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfind_elements_by_class_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mfind_element\u001b[0;34m(self, by, value)\u001b[0m\n\u001b[1;32m    976\u001b[0m         return self.execute(Command.FIND_ELEMENT, {\n\u001b[1;32m    977\u001b[0m             \u001b[0;34m'using'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mby\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 978\u001b[0;31m             'value': value})['value']\n\u001b[0m\u001b[1;32m    979\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    980\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfind_elements\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mby\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mBy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mID\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    319\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    320\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 321\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    322\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[1;32m    323\u001b[0m                 response.get('value', None))\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/selenium/webdriver/remote/errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    240\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'alert'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 242\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    243\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    244\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNoSuchElementException\u001b[0m: Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\".bIiDR\"}\n  (Session info: chrome=81.0.4044.113)\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Looking for [chromedriver 86.0.4240.22 linux64] driver in cache \n",
+      "[WDM] - File found in cache by path [/home/deadwalker/.wdm/drivers/chromedriver/86.0.4240.22/linux64/chromedriver]\n"
      ]
     }
    ],
    "source": [
-    "browser = webdriver.Chrome()\n",
+    "browser = webdriver.Chrome(ChromeDriverManager().install())\n",
     "browser.get('https://www.instagram.com/') #starting the webdriver sesion\n",
     "wait = WebDriverWait(browser, 10) \n",
     "def login(): #login function\n",
     "    time.sleep(4)\n",
     "    name = browser.find_element_by_name(\"username\") #locate the username column\n",
-    "    name.send_keys(\"username\")\n",
+    "    name.send_keys(\"codingninjascmrit@gmail.com\")\n",
     "    time.sleep(1)\n",
     "    password=browser.find_element_by_name(\"password\") #locate the password column\n",
-    "    password.send_keys(\"password\")\n",
+    "    password.send_keys(\"coding.ninjas19\")\n",
     "    password.submit()\n",
     "    time.sleep(4)\n",
     "    btn=browser.find_element_by_class_name(\"bIiDR\") #locate the not now button\n",
@@ -74,61 +67,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "foodrush.recipe\n",
-      "yourfoodlab\n",
-      "food_.trails\n",
       "_food_overdose_\n",
-      "mumbaifoodie\n",
-      "food.n.furious\n",
-      "food\n",
-      "buzzfeedfood\n",
-      "travellerritu\n",
-      "food_stain_on_hands\n",
-      "foodsile\n",
-      "food_trails_of_gj\n",
-      "fbb__blore\n",
-      "sailusfood\n",
-      "foodstuffbangalore\n",
-      "idfreshfood\n",
+      "yourfoodlab\n",
+      "food_quest824\n",
       "foodnetwork\n",
-      "foodsmix\n",
-      "rajshrifood\n",
-      "dilsefoodie\n",
-      "enigmatic_foodie_travelers\n",
-      "yummyjapanfood\n",
-      "mealplans\n",
-      "delicioushealthyvideos\n",
-      "foodtalkindia\n",
-      "mumbaifoodcrush\n",
-      "voyagerstoriez\n",
-      "delhifoodwalks\n",
-      "dil_apna_foodie\n",
-      "foodiesince96\n",
-      "food_poker\n",
+      "foodys\n",
+      "foodwarsofficial\n",
+      "food\n",
+      "the_food_saucer\n",
+      "foodie_incarnate\n",
+      "thisisdelhi\n",
+      "foodandwine\n",
+      "foodrush.recipe\n",
+      "foodyeating\n",
+      "foodistamysuru\n",
+      "foodporn\n",
+      "bongeats\n",
+      "foodranchi\n",
+      "bbcfood\n",
+      "ndtv_food\n",
       "foodpandaindia\n",
-      "livingfoodz\n",
-      "kashmirfoodgram\n",
-      "infini_shades_food\n",
+      "travellerritu\n",
       "foodinsider\n",
-      "whaaatislife\n",
-      "karnataka.food.diaries\n",
-      "foodgod\n",
-      "mumbaifoodreview\n",
-      "foodoholic26\n",
-      "navimumbai_foodjunkies\n",
-      "navimumbai_foodblogger\n",
-      "navimumbai_foodies\n",
+      "food_hotel_reviewer\n",
       "wirallyfood\n",
-      "foodbloggerai\n",
-      "vegan_govegan\n",
-      "foodandwine\n"
+      "food.darzee\n",
+      "goodfoodau\n",
+      "food52\n",
+      "foodlty\n",
+      "wowfood5\n",
+      "ranchi_food_walks\n",
+      "fooddotcom\n",
+      "food._.sustenance\n",
+      "ziaflavia_foodnboobs\n",
+      "drooling__over__food\n",
+      "mumbaifoodie\n",
+      "delicioushealthyvideos\n",
+      "chaturvedineha10_\n",
+      "satshyaa\n",
+      "fao\n",
+      "foodsceneindia\n",
+      "foodbible\n",
+      "insight_food\n",
+      "food_mantraa\n",
+      "foodzoo2\n",
+      "fooodidilse\n",
+      "food_babe2.0\n",
+      "italyfoodprn\n"
      ]
     }
    ],
@@ -159,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
