--- a/Project Instabot-1 Rohan Raj.ipynb
+++ b/Project Instabot-1 Rohan Raj.ipynb
@@ -46,10 +46,10 @@
     "def login(): #login function\n",
     "    time.sleep(4)\n",
     "    name = browser.find_element_by_name(\"username\") #locate the username column\n",
-    "    name.send_keys(\"codingninjascmrit@gmail.com\")\n",
+    "    name.send_keys(\"username\")\n",
     "    time.sleep(1)\n",
     "    password=browser.find_element_by_name(\"password\") #locate the password column\n",
-    "    password.send_keys(\"coding.ninjas19\")\n",
+    "    password.send_keys(\"password\")\n",
     "    password.submit()\n",
     "    time.sleep(4)\n",
     "    btn=browser.find_element_by_class_name(\"bIiDR\") #locate the not now button\n",
